# yang-paibiao

./: .env.docker  .env.docker.example  .gitignore  CHANGELOG-AI.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_ACCURATE.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  claude.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
XiaoYang/: .gitignore  go.mod  go.sum
api/: character.proto  guild.proto  leagues.proto  rebot.proto  signup.proto  team.proto  user.proto  v1.proto
backend/: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  BOT_API_使用指南.md  BOT_API_开发总结_2025-12-31.md  BOT_API_快速参考.md  Dockerfile  README.md  alembic.ini  requirements.txt  test_new_bot_endpoints.md  test_weekly_record_column_sync.py
bot/: Dockerfile  main.py  personalization_service.py  qq_binding.py  requirements.txt  signup_service.py  team_board.py
client/: Dockerfile  nginx.conf  package-lock.json  package.json
data/: .gitkeep  README.md
docs/: API-实现状态.md  SLOT_ALLOCATION_REFACTOR.md  api-design.md  bot官方部署参考.md
frontend/: .dockerignore  .env  .env.development  .env.production  Dockerfile  README.md  TESTING.md  docker-entrypoint.sh  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
yang_bot/: .dockerignore  .env.prod.example  .gitignore  Dockerfile  README.md  pyproject.toml  开发进度总结.md
yang_bot/src/plugins/jx3_bot/: __init__.py  config.py
yang_bot/src/plugins/jx3_bot/api/: __init__.py  client.py  types.py
yang_bot/src/plugins/jx3_bot/commands/: __init__.py  admin.py  daily.py  faction.py  luck.py  misc.py  rank.py  role.py  trade.py
yang_bot/src/plugins/jx3_bot/data/: __init__.py  guild_config.py
yang_bot/src/plugins/jx3_bot/render/: __init__.py  service.py
yang_bot/src/plugins/jx3_bot/render/templates/: active_list.html  arena_awesome.html  arena_schools.html  auction_record.html  baizhan.html  celebs.html  fireworks_records.html  rank_statistical.html  role_attribute.html  role_monster.html  school_force.html  server_qiyu_summary.html  trade_records.html  user_qiyu_record.html
yang_bot/src/plugins/jx3_bot/utils/: __init__.py  parser.py  server_list.py  server_resolver.py
yang_bot/src/plugins/shared/: __init__.py  screenshot_service.py
yang_bot/src/plugins/xiaoyang/: __init__.py  config.py  http_api.py
yang_bot/src/plugins/xiaoyang/adapters/: __init__.py  event_handlers.py  matchers.py  message_builder.py
yang_bot/src/plugins/xiaoyang/api/: __init__.py  client.py  models.py
yang_bot/src/plugins/xiaoyang/api/endpoints/: __init__.py  characters.py  members.py  signups.py  teams.py
yang_bot/src/plugins/xiaoyang/data/: __init__.py  xinfa.py
yang_bot/src/plugins/xiaoyang/services/: __init__.py  character_service.py  member_service.py  screenshot_service.py  session_manager.py  signup_service.py  team_service.py
yang_bot/src/plugins/xiaoyang/services/parser/: __init__.py  base.py  keyword_parser.py  nlp_parser.py  prompts.py
yang_bot/tests/: test_parsing.py
(+729 files in other folders)
